--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -34,6 +34,8 @@ services:
     restart: always
     tty: true
     command: --default-authentication-plugin=mysql_native_password
+    ports:
+      - "3306:3306"
     volumes:
       - ./db:/var/lib/mysql
       - ./dump:/docker-entrypoint-initdb.d
